# ribotools

./: .gitignore  ArgParser.cpp  ArgParser.h  BedRecord.cpp  CMakeLists.txt  MetaGene.cpp  MetaGene.h  MetaGeneMain.cpp  README.md  Version.cpp  Version.h  aminoacids.cpp  aminoacids.h  aminoacids.hpp  aminoacidtable.cpp  aminoacidtable.h  argparse.hpp  argumentparser.h  bamhandle.cpp  bamhandle.h  bamhandle.hpp  bamio.cpp  bamio.h  bedio.cpp  bedio.h  bedrecord.cpp  bedrecord.h  bedrecord.hpp  main_asite.cpp  main_basefreq.cpp  main_cai.cpp  main_codonfc.cpp  main_codonfreq.cpp  main_codonrate.cpp  main_count.cpp  main_depth.cpp  main_features.cpp  main_gcratio.cpp  main_gcref.cpp  main_gtftobed.cpp  (+25 more)
api/: Bed12.pm  RecordBed.pm  bamToReadLength.pl  countasite.pl  coverageAmplitude.pl  coverageInflection.pl  metageneMain.pl  psiteFilterOffset.pl  psiteGetFrame.pl  psiteGetOffset.pl  psiteOffset.pl  psiteOffsetMain.pl  psiteProject.pl  psiteProjectFrame.pl
api/archive/: reduceBamByUmi.pl
api/cpp/: CMakeLists.txt  bedrecord.cpp  bedrecord.hpp  codonNFC.cpp  codonTable.txt  parserbam.cpp  parserbam.hpp  parsercommands.cpp  parsercommands.hpp  translationRate.cpp
api/lib/: Bed12.pm  RecordBed.pm
api/matlab/: PlotMetaGene.m  PlotPSites.m  PlotPSitesHistogram.m  codonNFCtoMFDR.m  nfc2parameters.m  testCodonsFreq.m  testCodonsToSeq.m
api/mex/: BedLine.m  algorithmElongationRate.m  algorithmInitiationRate.m  alternativeElongationRate.m  bedToTracks.m  bedreduced.h  clusteringMonoVsPoly.m  coverage.cpp  coverage.h  coverage.mexmaci64  elongationRate.m  estimateMetaGene.m  exploreElongationRate.m  testMexHandle.m
api/mex/archive/: calculateElongationRate.m  calculateElongationRateByList.m  gbedrecord.cpp  gbedrecord.h
api/perl/: bedToGtfElongation.pl  codonCoverage.pl  metageneBlock.pl  nfcPerCodon.pl  psiteFilterOffset.pl  psiteGetFrame.pl  psiteProject.pl
api/perl/archive/: psiteMetageneMain.pl  psiteProjectionMain.pl
api/perl/lib/: MetaGene.pm
archive/: CMakeLists.txt
archive/src/: CMakeLists.txt  bedrecord.hpp  extractumi.cpp  metagene.hpp  metageneMain.cpp  parserbed.cpp
archive/test/: test.cpp  testMain.cpp
plotting/: PlotPSites.m  PlotPSitesHistogram.m
src/: CMakeLists.txt  bedrecord.cpp  bedrecord.hpp  countasite.cpp  countintersect.cpp  gbedrecord.cpp  gbedrecord.hpp  metagene.cpp  metagene.hpp  metageneMain.cpp  neuroribotools.cpp  parserbed.cpp  parserbed.hpp  parsergbed.cpp  parsergbed.hpp  ribotools.cpp  version.cpp
src/argparser/: ArgParser.cpp  CMakeLists.txt
src/bedrecord/: CMakeLists.txt
src/metagene/: CMakeLists.txt  metagene.cpp  metagene.h  metageneMain.cpp
src/utils/argparser/: ArgParser.h  CMakeLists.txt
src/utils/bedline/: BedLine.cpp  BedLine.h
test/: CMakeLists.txt  test.cpp  test.hpp  testMain.cpp  testMain.pl  test_tabix.cpp
tests/: metagene.pm  ribotools.pl
